--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -6,6 +6,10 @@
   outline: none;
   cursor: pointer;
   font-family: var(--poppins);
+}
+
+.button_primary,
+.button_secondary {
   border-radius: rem(50);
   align-items: center;
   justify-content: center;
@@ -27,18 +31,53 @@
 
 .button_secondary {
   background-color: $base-white;
-  color: $base-black;
+  color: $navy-blue;
   min-width: rem(150);
   padding: rem(8) rem(12) rem(8) rem(18);
+  gap: rem(12);
 
   &__arrow {
     @include flex-column();
-    align-items: center;
-    justify-content: center;
     width: rem(28);
     height: rem(28);
     border-radius: 100%;
     background-color: rgba($azure, 0.08);
-    color: #000;
+    align-items: center;
+    justify-content: center;
+
+    &__image {
+      margin: auto;
+      -webkit-mask-size: contain;
+      mask-size: contain;
+      -webkit-mask-repeat: no-repeat;
+      mask-repeat: no-repeat;
+      -webkit-mask-position: center;
+      mask-position: center;
+      -webkit-mask-image: url("../../assets/icons/arrow.svg");
+      mask-image: url("../../assets/icons/arrow.svg");
+      background-color: $navy-blue;
+      width: rem(12);
+      height: rem(12);
+    }
   }
+}
+
+.button_card {
+  @include flex-row();
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background-color: $navy-blue;
+  color: $base-white;
+  text-transform: uppercase;
+  padding: rem(20);
+
+  font-size: rem(15);
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: rem(1.406);
+
+  border-radius: rem(8);
+  box-shadow: 0 rem(14) rem(33) 0 rgba(0, 0, 0, 0.1);
 }
