--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,1 +1,10 @@
 @use "../../styles/main.scss" as *;
+
+.footer {
+  padding: rem(68) 0;
+  width: 100%;
+  background-color: $navy-blue;
+  &__container {
+    @include container();
+  }
+}
