--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -44,8 +44,11 @@
 
   &__social {
     grid-area: social;
+    margin-left: auto;
+    margin-right: auto;
     @include breakpoint(medium) {
       margin-left: auto;
+      margin-right: 0;
     }
   }
 }
