--- a/src/components/FooterLegalNotice/FooterLegalNotice.module.scss
+++ b/src/components/FooterLegalNotice/FooterLegalNotice.module.scss
@@ -31,6 +31,9 @@
     }
 
     align-items: center;
+    @include breakpoint(medium) {
+      align-items: end;
+    }
     justify-content: space-between;
 
     p {
