make stye for payment method card

--- a/src/styles/globals/_colors.scss
+++ b/src/styles/globals/_colors.scss
@@ -15,6 +15,7 @@ $navy-blue: #062949;
 $deep-blue: #103c63;
 $azure: #2962d0;
 $aqua: #00becc;
+$soft-aqua: #c5e5ea;
 $sky-blue: #ecfbff;
 $frost-blue: #e1f1f5;
 
