--- a/src/components/PaymentMethodCard/PaymentMethodCard.module.scss
+++ b/src/components/PaymentMethodCard/PaymentMethodCard.module.scss
@@ -10,7 +10,32 @@
     16px 16px 32px 0px rgba(92, 108, 123, 0.1);
 
   @include flex-column();
-  background-color: rgb(57, 120, 176);
+
+  &__dollar {
+    width: rem(56);
+    height: rem(56);
+    @include flex-column();
+    justify-content: center;
+    align-items: center;
+    border-radius: 100%;
+    background-color: $mint-green;
+  }
+
+  h3 {
+    margin: rem(16) 0 rem(4);
+    font-size: rem(24);
+    font-style: normal;
+    font-weight: 600;
+    line-height: rem(32);
+  }
+
+  p {
+    font-size: rem(15);
+    font-style: normal;
+    font-weight: 400;
+    line-height: rem(24);
+    margin-bottom: rem(16);
+  }
 
   &__range {
     @include flex-row();
@@ -27,8 +52,19 @@
       top: 0;
       left: 0;
       height: rem(8);
-      border-radius: rem(10);
+      border-top-right-radius: rem(6);
+      border-bottom-right-radius: rem(6);
       background-color: $emerald-green;
     }
   }
+}
+
+.primary {
+  background-color: $base-white;
+  color: $light-black;
+}
+
+.secondary {
+  background-color: $soft-aqua;
+  color: $navy-blue;
 }
