--- a/src/containers/home-page/BannerSection/BannerSection.module.scss
+++ b/src/containers/home-page/BannerSection/BannerSection.module.scss
@@ -1,5 +1,11 @@
 @use "../../../styles/main.scss" as *;
 
+.banner_section {
+  height: 100dvh;
+  width: 100%;
+  position: relative;
+}
+
 .banner {
   height: 100dvh;
   width: 100%;
