--- a/src/containers/home-page/BannerSection/BannerSection.module.scss
+++ b/src/containers/home-page/BannerSection/BannerSection.module.scss
@@ -4,6 +4,34 @@
   height: 100dvh;
   width: 100%;
   position: relative;
+
+  &__text {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    z-index: 3;
+    color: $base-white;
+    @include flex-column();
+    align-items: center;
+    justify-content: center;
+
+    h1 {
+      font-size: rem(42);
+
+      @include breakpoint(medium) {
+        font-size: rem(116);
+      }
+    }
+
+    p {
+      font-size: rem(16);
+
+      @include breakpoint(medium) {
+        font-size: rem(18);
+      }
+    }
+  }
 }
 
 .banner {
