--- a/src/containers/home-page/ExperienceRatingList/ExperienceRatingList.module.scss
+++ b/src/containers/home-page/ExperienceRatingList/ExperienceRatingList.module.scss
@@ -1,1 +1,12 @@
 @use "../../../styles/main.scss" as *;
+
+.experience_rating_list {
+  @include flex-row();
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: rem(42);
+
+  @include breakpoint(large) {
+    column-gap: rem(211);
+  }
+}
