make style for title

--- a/src/components/Title/Title.module.scss
+++ b/src/components/Title/Title.module.scss
@@ -17,3 +17,14 @@
     }
   }
 }
+
+.primary {
+  color: $base-white;
+}
+
+.secondary {
+  color: $navy-blue;
+  p {
+    color: $light-black !important;
+  }
+}
