add third variant to tagline

--- a/src/components/TaglineBox/TaglineBox.module.scss
+++ b/src/components/TaglineBox/TaglineBox.module.scss
@@ -26,6 +26,11 @@
 }
 
 .secondary_tagline {
+  background-color: $deep-blue;
+  color: $base-white;
+}
+
+.third_tagline {
   background-color: rgba($deep-blue, 0.1);
   color: $deep-blue;
 }
