style home destination route list

--- a/src/containers/home-page/HomeDestinationRouteList/HomeDestinationRouteList.module.scss
+++ b/src/containers/home-page/HomeDestinationRouteList/HomeDestinationRouteList.module.scss
@@ -1,1 +1,7 @@
 @use "../../../styles/main.scss" as *;
+
+.home_destination_route_list {
+  margin-top: rem(133);
+  @include flex-column();
+  gap: rem(78);
+}
