add margin to section

--- a/src/containers/home-page/ExperienceHighlightSection/ExperienceHighlightSection.module.scss
+++ b/src/containers/home-page/ExperienceHighlightSection/ExperienceHighlightSection.module.scss
@@ -1,5 +1,8 @@
 @use "../../../styles/main.scss" as *;
 
 .experience_higlight_section {
-  @include container();
+  margin: rem(180) 0;
+  &__container {
+    @include container();
+  }
 }
