make style for home payment card

--- a/src/containers/home-page/HomePaymentSection/HomePaymentSection.module.scss
+++ b/src/containers/home-page/HomePaymentSection/HomePaymentSection.module.scss
@@ -6,4 +6,15 @@
   &__container {
     @include container();
   }
+
+  &__options {
+    margin-top: rem(100);
+    @include flex-column();
+    justify-content: center;
+    align-items: center;
+    gap: rem(60);
+    @include breakpoint(medium) {
+      @include flex-row();
+    }
+  }
 }
