--- a/src/containers/home-page/HomeFlexiblePaymentSection/HomeFlexiblePaymentSection.module.scss
+++ b/src/containers/home-page/HomeFlexiblePaymentSection/HomeFlexiblePaymentSection.module.scss
@@ -1,14 +1,22 @@
 @use "../../../styles/main.scss" as *;
 
 .home_flexible_payment_section {
-  padding: rem(93) 0 rem(29);
   background-color: $navy-blue;
+  position: relative;
+  &__texture {
+    height: 100%;
+    position: absolute;
+  }
 
   &__container {
     @include container();
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
   }
 
   &__title {
+    padding-top: rem(93);
     color: $base-white;
     text-align: center;
   }
@@ -16,11 +24,13 @@
   &__list {
     margin: rem(115) 0;
     @include flex-row();
+    flex-wrap: wrap;
     justify-content: center;
     gap: rem(64);
   }
 
   &__description {
+    padding-bottom: rem(29);
     text-align: center;
     font-size: rem(13);
     font-style: normal;
