add style to list

--- a/src/containers/destination-page/DestinationHighlightsList/DestinationHighlightsList.module.scss
+++ b/src/containers/destination-page/DestinationHighlightsList/DestinationHighlightsList.module.scss
@@ -1,1 +1,9 @@
 @use "../../../styles/main.scss" as *;
+
+.highlights_list {
+  margin-top: rem(80);
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(376px, 376px));
+  gap: rem(65);
+  justify-content: center;
+}
