--- a/src/containers/destination-page/DestinationHighlightsList/DestinationHighlightsItem/DestinationHighlightsItem.module.scss
+++ b/src/containers/destination-page/DestinationHighlightsList/DestinationHighlightsItem/DestinationHighlightsItem.module.scss
@@ -1,1 +1,31 @@
 @use "../../../../styles/main.scss" as *;
+
+.highlights_item {
+  @include flex-column();
+  gap: rem(16);
+  width: 100%;
+  max-width: rem(376);
+  &__image {
+    border-radius: rem(10);
+    overflow: hidden;
+    margin-bottom: rem(16);
+    filter: drop-shadow(16px 16px 32px rgba(92, 108, 123, 0.1))
+      drop-shadow(2px 2px 6px rgba(72, 75, 87, 0.06));
+  }
+
+  h3 {
+    color: $mid-black;
+    font-size: rem(24);
+    font-style: normal;
+    font-weight: 500;
+    line-height: 32px;
+  }
+
+  p {
+    color: $navy-blue;
+    font-size: rem(15);
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+  }
+}
