make abilities list

--- a/src/containers/destination-page/DestinationAccordionList/DestinationAccordionList.module.scss
+++ b/src/containers/destination-page/DestinationAccordionList/DestinationAccordionList.module.scss
@@ -1,1 +1,8 @@
 @use "../../../styles/main.scss" as *;
+
+.accorion_list {
+  margin: 0 auto;
+  max-width: rem(1010);
+  @include flex-column();
+  gap: rem(39);
+}
