--- a/src/containers/destination-page/DestinationHighlightsList/DestinationHighlightsItem/DestinationHighlightsItem.module.scss
+++ b/src/containers/destination-page/DestinationHighlightsList/DestinationHighlightsItem/DestinationHighlightsItem.module.scss
@@ -6,6 +6,7 @@
   width: 100%;
   max-width: rem(376);
   &__image {
+    width: 100%;
     border-radius: rem(10);
     overflow: hidden;
     margin-bottom: rem(16);
