--- a/src/containers/home-page/HomeTestimonialData/HomeTestimonialData.module.scss
+++ b/src/containers/home-page/HomeTestimonialData/HomeTestimonialData.module.scss
@@ -1,6 +1,10 @@
 @use "../../../styles/main.scss" as *;
 
 .home_testimonial_data {
+  padding-top: 0;
+  @include breakpoint(large) {
+    padding-top: 50%;
+  }
   h3 {
     color: $navy-blue;
     font-size: rem(36);
