--- a/src/components/Testimonial/Testimonial.module.scss
+++ b/src/components/Testimonial/Testimonial.module.scss
@@ -32,6 +32,7 @@
 
   &__children {
     width: 100%;
+    height: fit-content;
     @include container();
     position: absolute;
     z-index: 3;
@@ -40,10 +41,10 @@
     transform: translate(-50%, -50%);
 
     @include breakpoint(large) {
-      width: fit-content;
-      top: 30%;
-      left: 65%;
-      transform: translate(-20%, -65%);
+      width: calc(95% - 45%);
+      top: 35%;
+      left: 70%;
+      transform: translate(-35%, -70%);
     }
   }
 }
