--- a/src/containers/destination-page/DestinationCTA/DestinationCTA.module.scss
+++ b/src/containers/destination-page/DestinationCTA/DestinationCTA.module.scss
@@ -1,7 +1,7 @@
 @use "../../../styles/main.scss" as *;
 
 .destination_cta {
-  margin-top: rem(24);
+  margin-top: -20%;
   gap: rem(22);
   @include flex-column();
   color: $navy-blue;
