--- a/src/components/Testimonial/Testimonial.module.scss
+++ b/src/components/Testimonial/Testimonial.module.scss
@@ -17,6 +17,7 @@
     top: 0;
     left: 0;
     right: 0;
+    z-index: -1;
     background: linear-gradient(
       0deg,
       rgba(255, 255, 255, 0) 9.04%,
@@ -25,26 +26,29 @@
   }
 
   &__image {
+    position: absolute;
     width: 100%;
     height: 100%;
     object-fit: cover;
+    z-index: -2;
+  }
+
+  &__container {
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    max-width: rem(1440);
   }
 
   &__children {
+    margin-top: rem(100);
     width: 100%;
-    height: fit-content;
-    @include container();
-    position: absolute;
-    z-index: 3;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+
+    padding: 0 rem(40);
 
     @include breakpoint(large) {
-      width: calc(95% - 45%);
-      top: 35%;
-      left: 70%;
-      transform: translate(-35%, -70%);
+      padding-left: 60%;
+      padding-right: 0;
     }
   }
 }
