--- a/src/containers/destination-page/DestinationSlider/DestinationSlider.module.scss
+++ b/src/containers/destination-page/DestinationSlider/DestinationSlider.module.scss
@@ -1,1 +1,8 @@
 @use "../../../styles/main.scss" as *;
+
+.destination_slider {
+  width: 100%;
+  max-width: rem(555);
+  height: rem(500);
+  border-radius: rem(15);
+}
