--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -14,6 +14,7 @@
 
     justify-content: space-between;
     @include flex-row();
+    align-items: center;
   }
 
   &__logo {
@@ -22,10 +23,18 @@
       width: rem(216);
     }
 
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
+    &__icon {
+      @include flex-row();
+      -webkit-mask-size: contain;
+      mask-size: contain;
+      -webkit-mask-repeat: no-repeat;
+      mask-repeat: no-repeat;
+      -webkit-mask-position: center;
+      mask-position: center;
+      -webkit-mask-image: url("../../assets/icons/charterag.svg");
+      mask-image: url("../../assets/icons/charterag.svg");
+      height: 120px;
+      width: 126px;
     }
   }
 
@@ -62,6 +71,10 @@
       color: $navy-blue;
     }
   }
+
+  .header__logo__icon {
+    background-color: $base-white;
+  }
 }
 
 .secondary {
@@ -83,6 +96,10 @@
     &__login:hover {
       color: $base-white;
     }
+  }
+
+  .header__logo__icon {
+    background-color: $navy-blue;
   }
 }
 
