fix bug on home with texture image

--- a/src/containers/home-page/HomeFlexiblePaymentSection/HomeFlexiblePaymentSection.module.scss
+++ b/src/containers/home-page/HomeFlexiblePaymentSection/HomeFlexiblePaymentSection.module.scss
@@ -3,7 +3,10 @@
 .home_flexible_payment_section {
   background-color: $navy-blue;
   position: relative;
+
   &__texture {
+    width: 100%;
+    object-fit: cover;
     height: 100%;
     position: absolute;
   }
